--- a/public/index.html
+++ b/public/index.html
@@ -310,7 +310,7 @@
     ga('create', 'UA-68515019-1', 'auto');
     ga('send', 'pageview');
 </script>
-<!--<script async src='https://www.google-analytics.com/analytics.js'></script>-->
+<script async src='https://www.google-analytics.com/analytics.js'></script>
 <!-- End Google Analytics -->
 </body>
 </html>
