--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
     <script src='./js/page.js'></script>
 
     <!-- enable google analytics -->
-    <!--<script async defer src='https://www.google-analytics.com/analytics.js'></script>-->
+    <script async defer src='https://www.google-analytics.com/analytics.js'></script>
 </head>
 <body class="avenir near-white bg-near-black">
 
